--- a/1 Linux and TCP-IP networking/Linux and TCP-IP networking.tex
+++ b/1 Linux and TCP-IP networking/Linux and TCP-IP networking.tex
@@ -133,7 +133,7 @@ more /etc/services
     First, run \lstinline{tcpdump -enx -w dump.pcap} in \textit{h1}.
     You will not see any \lstinline{tcpdump} output, since the \lstinline{-w} option is used to write the output to the \path{dump.pcap} file.
 
-    Then, you may want to run \lstinline{telnet 128.238.66.102} to generate some TCP traffic.\footnote{Remember to run \lstinline{/etc/init.d/xinetd restart} in \textit{h2} to start telnet server on it.}
+    Then, you may want to run \lstinline{telnet 128.238.66.102} in \textit{h1} to generate some TCP traffic.\footnote{Remember to run \lstinline{/etc/init.d/xinetd restart} in \textit{h2} to start telnet server on it.}
     After you login to \textit{h2} (use \textbf{netlab} for username and password), terminate the \lstinline{telnet} session and terminate the \lstinline{tcpdump} program.
     Next, you will use \lstinline{tcpdump} or \lstinline{wireshark} to open the packet trace captured by \lstinline{tcpdump} and analyze the captured packets.
     To do this, use this command \lstinline{tcpdump -r dump.pcap} to see content of \path{dump.pcap} or see with GUI \lstinline{wireshark dump.pcap &}\footnote{To use \lstinline{wireshark} in isolated \lstinline{docker} space, you need to copy file from  \lstinline{docker} space to your PC}.
@@ -214,6 +214,7 @@ telnet 128.238.66.102
     Then, \lstinline{telnet} to the \textit{h2} from a second command window (Auxiliary console) by typing \lstinline{telnet 128.238.66.102}.
     Again issue the same \lstinline{telnet 128.238.66.102} command from a third command window.
     Now you are opening two \lstinline{telnet} sessions to \textit{h2} simultaneously, from two different command windows.
+    % On each telnet terminal, run \lstinline{pwd} to generate traffic.
 
     Check the port numbers being used on both sides of the two connections from the output in the \lstinline{wireshark} window.
 
