--- a/1 Linux and TCP-IP networking/Linux and TCP-IP networking.tex
+++ b/1 Linux and TCP-IP networking/Linux and TCP-IP networking.tex
@@ -205,7 +205,7 @@ telnet 128.238.66.102
     \begin{report}
         \item What are the port numbers used by the \textit{h1} (local machine) and \textit{h2} (remote machine)?
 
-        \item Which machine’s port number matches the port number listed for \lstinline{telnet} in the \path{/etc/services} file?
+        \item Which port numbers matches the port number listed for \lstinline{telnet} in the \path{/etc/services} file?
     \end{report}
 
 \section{Random Port}
