--- a/1 Linux and TCP-IP networking/Linux and TCP-IP networking.tex
+++ b/1 Linux and TCP-IP networking/Linux and TCP-IP networking.tex
@@ -150,7 +150,7 @@ more /etc/services
 
 \section{\texttt{ARPing}}
     This time we will run \lstinline{wireshark} to capture an ARP request and an ARP reply in real-time.
-    Simply run \lstinline{wireshark &} in \textit{h1} and select the interface and start capturing.
+    Simply run \lstinline{wireshark} on \textit{h1} link with right click and select \textbf{start capture} item to start capturing\footnote{On physical machine, can start capture with \lstinline{wireshark &} command.}.
     If there is no arp requests and replies in the network, generate some using \lstinline{arping 128.238.66.102} command in the \textit{h1} terminal.
 
     Now you should see several ARP replies in the \lstinline{arping} output.
@@ -195,7 +195,7 @@ more /etc/services
     \end{itemize}
 
 \section{Connection Port}
-    In \textit{h1} run \lstinline{wireshark &} and select an interface to capture packets between hosts.
+    Run \lstinline{wireshark} on \textit{h1} link and select an interface to capture packets between hosts.
 
     Execute a TCP utility, \lstinline{telnet} for example, in another command window:
     \begin{lstlisting}
@@ -209,7 +209,7 @@ telnet 128.238.66.102
     \end{report}
 
 \section{Random Port}
-    In \textit{h1} run \lstinline{wireshark &} and select an interface to capture packets between hosts.
+    Run \lstinline{wireshark} on \textit{h1} link and select an interface to capture packets between hosts.
 
     Then, \lstinline{telnet} to the \textit{h2} from a second command window (Auxiliary console) by typing \lstinline{telnet 128.238.66.102}.
     Again issue the same \lstinline{telnet 128.238.66.102} command from a third command window.
