change wireshark start command (use gns3 link capture)

--- a/2 A single segment network/A single segment network.tex
+++ b/2 A single segment network/A single segment network.tex
@@ -128,7 +128,7 @@ arp -d remote-host
     While \lstinline{tcpdump -en}\footnote{You can add \lstinline{-x} flag to see hex dump.} is running, \lstinline{ping} a remote host that has no entry in \textit{h0} ARP table.
     Then terminate the \lstinline{tcpdump} program.
 
-    You can run \lstinline{wireshark &} to capture network.
+    You can run \lstinline{wireshark} to capture network packet by \textbf{start capture} in GNS3 link menu.
 
     Observe the first few lines of the packet trace to see how ARP is used to resolve an IP address.
 
